# MK111

./: .gitignore  115.md  CMakeLists.txt  README.md  examples.txt  for_examples.txt  input.txt  lexer.cpp  lexer.h  ops_generator.cpp  ops_generator.h  ops_interpreter.cpp  ops_interpreter.h  run.bat  stack_machine.cpp  stack_machine.h  syntax_analyzer.cpp  syntax_analyzer.h  Методы компиляции.md
